# ugv_sdk

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  doxyfile  package.xml  setup.py
.github/workflows/: c-cpp.yml  pybind-ci.yml  ros-ci.yml  standalone-ci.yml
apps/: CMakeLists.txt
apps/hunter_demo/: hunter_demo.cpp
apps/ranger_demo/: ranger_demo.cpp
apps/scout_demo/: scout_demo.cpp  scout_discharge.cpp
apps/scout_monitor/: CMakeLists.txt
apps/scout_monitor/app/: app_scout_monitor.cpp
apps/scout_monitor/include/monitor/: ncolors.hpp  nshapes.hpp  scout_monitor.hpp
apps/scout_monitor/src/: ncolors.cpp  nshapes.cpp  scout_monitor.cpp
apps/scout_monitor/tests/: CMakeLists.txt  test_ncolor.c  test_ncolor2.cpp  test_scout_monitor.cpp
asio/: CMakeLists.txt
cmake/: ugv_sdkConfig.cmake.in  wrp_sdkConfig.cmake.in
demo/: CMakeLists.txt
demo/bunker_demo/: CMakeLists.txt  bunker_robot_demo.cpp
demo/hunter_demo/: CMakeLists.txt  hunter_demo.cpp  hunter_robot_demo.cpp
demo/ranger_demo/: CMakeLists.txt  ranger_demo.cpp  ranger_robot_demo.cpp
demo/scout_demo/: CMakeLists.txt  scout_mini_omni_demo.cpp  scout_robot_demo.cpp  scout_v2_demo.cpp
demo/tracer_demo/: CMakeLists.txt  tracer_demo.cpp  tracer_robot_demo.cpp
demo/utils_demo/: demo_protocol_detector.cpp
docs/: interface_hierachy.drawio
docs/misc/: beaglebone_black_can_cape.md  beaglebone_ros_install.md  can_msg.txt  check_endianness.md  commands.md  jetson_tx2_can.md  release_checklist.md  test_can_msg.txt
docs/protocol_v2/: Hunter-2.0+CAN通讯协议v2.1.s.xlsx  SCOUT_UserManual_v1.3.0_S.docx
include/asio/: CMakeLists.txt
include/ugv_sdk/: agilex_base.hpp  agilex_base_serialport.h  agilex_message.h  limo_base.h  limon_base.h  mobile_base.hpp  ranger_base.hpp  scout_base.hpp  tracer_base.hpp
python/: CMakeLists.txt
python/ugv_sdk/: CMakeLists.txt  agilex_message.cpp  agilex_message.hpp  hunter_robot.cpp  ranger_robot.cpp  scout_robot.cpp
python/ugv_sdk_py/: CMakeLists.txt
python/ugv_sdk_py/include/ugv_sdk_py/: agilex_message.hpp  hunter_robot.hpp  ranger_robot.hpp  scout_robot.hpp
python/ugv_sdk_py/src/: agilex_message.cpp  hunter_robot.cpp  ranger_robot.cpp  scout_robot.cpp  ugv_sdk_py.cpp
sample/: CMakeLists.txt  tracer_demo.cpp
sample/bunker_demo/: CMakeLists.txt  bunker_robot_demo.cpp
sample/hunter_demo/: hunter_robot_demo.cpp
sample/ranger_demo/: CMakeLists.txt  ranger_mini_v1_robot_demo.cpp  ranger_robot_demo.cpp
sample/scout_demo/: scout_mini_omni_demo.cpp  scout_robot_demo.cpp
sample/utils_demo/: CMakeLists.txt  demo_protocol_detector.cpp  demo_robot_version.cpp
scripts/: bringup_can2usb_1m.bash
src/: CMakeLists.txt  agilex_base.cpp  agilex_base_serialport.cpp  agx_msg_parser.c  agx_protocol_v2.h  async_can.cpp  async_serial.cpp  asyncio_utils.hpp  limo_base.cpp  limon_base.cpp  ranger_base.cpp  scout_base.cpp  stopwatch.h  tracer_base.cpp
src/apps/: CMakeLists.txt
src/apps/hunter_demo/: hunter_demo.cpp
src/apps/scout_demo/: scout_demo.cpp
src/apps/scout_monitor/: CMakeLists.txt
src/apps/scout_monitor/app/: CMakeLists.txt  app_scout_monitor.cpp
src/apps/scout_monitor/src/: ncolors.cpp  scout_monitor.cpp
src/apps/scout_monitor/tests/: test_ncurses.cpp  test_scout_monitor_virtual.cpp
src/apps/tracer_demo/: tracer_demo.cpp
src/async_io/tests/: CMakeLists.txt  test_aserial_comm.cpp  test_asio_can.cpp
src/async_port/: async_can.cpp  async_serial.cpp
src/asyncio/: async_can.cpp  async_serial.cpp  asyncio_utils.cpp
src/common/: CMakeLists.txt
src/common/async_io/: CMakeLists.txt
src/common/async_io/src/: async_can.cpp  asyncio_utils.cpp  asyncio_utils.hpp
src/common/async_io/tests/: test_acan.cpp  test_aserial.cpp
src/common/utilities/stopwatch/: CMakeLists.txt  README.md
src/common/utilities/stopwatch/include/stopwatch/: stopwatch.h
src/hunter_sdk/: CMakeLists.txt
src/hunter_sdk/hunter_base/: CMakeLists.txt
src/hunter_sdk/hunter_base/include/hunter_base/: hunter_base.hpp  hunter_types.hpp
src/hunter_sdk/hunter_base/src/: hunter_base.cpp
src/hunter_sdk/hunter_base/tests/: CMakeLists.txt  test_hunter_base.cpp  test_scout_serial.cpp
src/hunter_sdk/hunter_protocol/: CMakeLists.txt
src/hunter_sdk/hunter_protocol/include/hunter_protocol/: hunter_can_parser.h  hunter_uart_parser.h
src/hunter_sdk/hunter_protocol/src/: hunter_can_parser.c  hunter_uart_parser.c
src/legacy/: scout_can_parser_v1.c
src/mobile_base/: scout_robot.cpp
src/mobile_robot/: bunker_robot.cpp  hunter_robot.cpp  ranger_robot.cpp  scout_robot.cpp  titan_robot.cpp  tracer_robot.cpp
src/protocol_v1/: agilex_message_v1.h  agilex_msg_parser_v1.c  (+4 more)
src/scout_sdk/scout_base/: CMakeLists.txt
src/scout_sdk/scout_base/include/scout_base/: scout_base.hpp  scout_types.hpp
src/scout_sdk/scout_base/src/: scout_base.cpp
src/scout_sdk/scout_protocol/: CMakeLists.txt  README.md
src/scout_sdk/scout_protocol/include/scout_protocol/: scout_can_parser.h  scout_uart_parser.h
src/scout_sdk/scout_protocol/src/: scout_can_parser.c  scout_uart_parser.c
src/tracer_sdk/tracer_base/: CMakeLists.txt
src/tracer_sdk/tracer_base/include/tracer_base/: tracer_base.hpp  tracer_types.hpp
src/tracer_sdk/tracer_base/src/: tracer_base.cpp
src/tracer_sdk/tracer_base/tests/: test_tracer_base.cpp
test/: CMakeLists.txt  scout_memory_check.cpp
test/python/: test_hunter_robot.py  test_ranger_robot.py  test_scout_robot.py  test_ugv_sdk_py.py
test/unit_tests/: utest_hunter_v1_command.cpp  utest_scout_v1_command.cpp
tests/: CMakeLists.txt  test_acan.cpp  test_aserial.cpp  test_aserial_comm.cpp  test_can_msg.cpp  test_hunter_base.cpp  test_scout_base.cpp  test_serial_parser.cpp
tests/devel_tests/: CMakeLists.txt  test_acan.cpp  test_aserial.cpp  test_aserial_comm.cpp  test_scout_serial.cpp  test_tracer_base.cpp
tests/unit_tests/: ringbuf_test.cpp
ugv_sdk/: CMakeLists.txt  package.xml
unit_tests/: CMakeLists.txt
unit_tests/googletest/: VERSION.md
unit_tests/gtests/: scout_can_protocol_test.cpp
(+154 files in other folders)
