<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_sdk</name>
  <version>0.8.2</version>
  <description>Weston Robot Platform SDK</description>

  <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
  <maintainer email="ruixiang.du@westonrobot.com">Ruixiang Du</maintainer>

  <license>BSD</license>

  <url type="website">https://www.westonrobot.com/</url>
  <url type="bugtracker">https://github.com/westonrobot/ugv_sdk/issues</url>
  <url type="repository">https://github.com/westonrobot/ugv_sdk</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> 
  <build_depend>asio</build_depend>
  <export></export>
</package>
