# demo
add_subdirectory(scout_demo)
add_subdirectory(tracer_demo)
add_subdirectory(ranger_demo)

# add_executable(app_hunter_demo hunter_demo/hunter_demo.cpp)
# target_link_libraries(app_hunter_demo ugv_sdk)

# add_executable(app_tracer_demo tracer_demo/tracer_demo.cpp)
# target_link_libraries(app_tracer_demo ugv_sdk)

# add_executable(app_ranger_demo ranger_demo/ranger_demo.cpp)
# target_link_libraries(app_ranger_demo ugv_sdk)
