## Add libraries
set(HUNTER_PROTOCOL_SRC 
    src/hunter_can_parser.c
)
add_library(hunter_protocol STATIC ${HUNTER_PROTOCOL_SRC})
target_include_directories(hunter_protocol PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>	
    PRIVATE src)

# install(TARGETS hunter_protocol
#     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
#     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
  
# install(DIRECTORY include
#     DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})